[fix] Avoid stretching of nav when larger screens

--- a/src/pages/homeLayout/HomeLayout.css
+++ b/src/pages/homeLayout/HomeLayout.css
@@ -14,12 +14,17 @@
 nav {
   display: flex;
   justify-content: space-around;
-  height: 5vh;
+
   a {
     flex: 1;
-    text-align: center;
     font-size: 1.5rem;
     line-height: 2;
+    height: 4rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     &:hover {
       background-color: rgb(210, 180, 140);
     }
